--- a/src/main/resources/templates/ajouteProf.html
+++ b/src/main/resources/templates/ajouteProf.html
@@ -10,6 +10,7 @@
 <form th:action="@{/ajouteprof}" th:object="${prof}" method="post">
     <label for="nom">Nom</label>
     <input type="text" name="nom" id="nom" th:field="*{nomProf}">
+    <p style="color: crimson" th:if="${#fields.hasErrors('nomProf')}" th:errors="*{nomProf}">Name Error</p>
     <input type="submit" value="Envoyer">
 </form>
 
