--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
     <a href="/ajoutcours">Ajouter un cours</a>  <br>
     <a href="/ajoutetudiant">Ajouter un etudiant</a>     <br>
     <a href="/profs">Liste les profs</a>     <br>
+    <a href="/dateexamples">Examples de dates</a>     <br>
 
 <!--    <table>-->
 <!--        <tr>-->
